spaCy 3.1; de tests not passing yet

--- a/holmes_extractor/lang/en/data/derivation.csv
+++ b/holmes_extractor/lang/en/data/derivation.csv
@@ -203,6 +203,7 @@ forgive,forgiveness
 frequent,frequency
 fur,furry
 generous,generosity
+gift,give
 glass,glassy
 govern,government
 grand,grandeur
