Major refactoring: additional tests and corrs

--- a/holmes_extractor/lang/en/data/derivation.csv
+++ b/holmes_extractor/lang/en/data/derivation.csv
@@ -130,6 +130,7 @@ disagree,disagreement
 disappoint,disappointing,disappointment
 disaster,disastrous
 discourage,discouragement
+discuss,discussion
 dishonest,dishonesty
 dismiss,dismissal
 disobey,disobedient,disobedience
